<resources>
    <string name="app_name">나루</string>
    <string name="Online">온라인</string>
    <string name="Offline">오프라인</string>
    <string name="Loading">불러오는 중..</string>
    <string name="More">더보기</string>
    <string name="MoreContextTitle">실행할 동작을 선탁하세요</string>
    <string name="Run_Boot">컴퓨터 전원 켜기</string>
    <string name="Run_Shutdown">컴퓨터 전원 끄기</string>
    <string name="Run_RdpServer">TeamViewer 서버 켜기</string>
    <string name="Run_FileServer">파일 공유 서버 켜기</string>
    <string name="Reboot">재부팅</string>
    <string name="Confirm_Wakeup">컴퓨터 전원을 켭니다.</string>
    <string name="Confirm_Shutdown">컴퓨터 전원을 끕니다.</string>
    <string name="Confirm_RdpServer">TeamViewer 서버를 시작합니다.</string>
    <string name="Confirm_FileServer">파일 공유 서버를 시작합니다.</string>
    <string name="Confirm_PiReboot">라즈베리 서버를 재부팅합니다.</string>
    <string name="server_error">통신 에러가 발생했습니다.</string>
    <string name="Confirm_Play">링크를 데스크탑에 보냅니다.</string>
    <string name="Mute">음소거</string>
    <string name="VolumeSeekbar">시스템 볼륨 조절</string>
    <string name="Confirm_Mute">음소거 설정을 변경합니다.</string>
    <string name="Task_Created">메모를 추가했습니다.</string>
    <string name="CreateTask">할 일 추가</string>
    <string name="PanelName_RemoteDesktop">원격 데스크탑 제어 패널</string>
    <string name="PanelName_Memoboard">할 일 목록 관리 패널</string>
    <string name="Run_MemoboardPanel">할 일 목록 관리</string>
    <string name="AdvancedControl">기타 조작</string>
    <string name="WriteDiary">일기 쓰기</string>
    <string name="PanelName_RaspberryServer">라즈베리 서버 제어 패널</string>
    <string name="PanelName_FoodDispenser">오늘의 추천 메뉴</string>
    <string name="RemainToPayDay">월급까지</string>
    <string name="Reroll">다시 뽑기</string>
    <string name="CallToStore">매장에 전화하기</string>
    <string name="apply">등록</string>
    <string name="ShowLogs">서버 로그 조회하기</string>
    <string name="LogLevelFilter">로그 레벨 필터</string>
    <string name="SetDate_Today">오늘</string>
    <string name="SetDate_Tommorow">내일</string>
    <string name="TouchToDetail">터치하여 자세히</string>
    <string name="CurrentTemperature">현재 온도 : %1$s˚C</string>
    <string name="Dday">D-%1$d</string>
    <string name="ReloadSchedule">예약 작업 목록 새로고침</string>
    <string name="Success_Schedule_Reload">서버 스케줄러를 새로 고쳤습니다.</string>
    <string name="FoodDispenser">뭐먹지?</string>
    <string name="RandomCorrect">오래된 일기\n첨삭하기</string>
    <string name="PanelName_ServerSchedule">서버 스케줄 관리</string>
    <string name="Confirm_Toggle_Schedule">이 스케줄의 활성 상태를 전환할까요?</string>
    <string name="tempdiff">일교차 %1$s\n(%2$d ~ %3$d˚C)</string>
    <string name="temp">%1$s˚C</string>
    <string name="tempdiff2_similar">어제랑 비슷한 온도에요.</string>
    <string name="tempdiff2_hot">어제보다 %1$s도 따뜻해요.</string>
    <string name="tempdiff2_cold">어제보다 %1$s도 추워요.</string>
    
    <string name="RecommendCloth">지금 날씨에 입기 좋은 옷</string>
    <string name="cloth_recommend_over28">반팔, 민소매 / 반바지</string>
    <string name="cloth_recommend_over23">반팔, 얇은 셔츠 / 얇은 바지</string>
    <string name="cloth_recommend_over20">얇은 가디건, 긴팔티 / 청바지</string>
    <string name="cloth_recommend_over17">얇은 니트, 맨투맨, 얇은 재킷 / 청바지</string>
    <string name="cloth_recommend_over12">자켓, 야상, 니트 /두꺼운 바지</string>
    <string name="cloth_recommend_over9">트렌치코트, 야상, 니트</string>
    <string name="cloth_recommend_over5">코드, 히트텍, 니트</string>
    <string name="cloth_recommend_under4">패딩, 두꺼운 코트, 목도리</string>
    <string name="KaraokeHelper">노래방 헬퍼</string>

    
</resources>